// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for ActablePredictive's sendEmailEvent destination action: all fields 1`] = `
Object {
  "data": Array [
    Object {
      "campaign_name": "6@zP90U",
      "clicked_flag": -6146779603009536,
      "customer_id": "6@zP90U",
      "date_email_sent": 1612137600,
      "opened_flag": -6146779603009536,
      "stream_key": "6@zP90U",
      "unsub_flag": -6146779603009536,
    },
  ],
}
`;

exports[`Testing snapshot for ActablePredictive's sendEmailEvent destination action: required fields 1`] = `
Object {
  "data": Array [
    Object {
      "customer_id": "6@zP90U",
      "date_email_sent": 1612137600,
      "stream_key": "6@zP90U",
    },
  ],
}
`;
